--- a/src/pages/event-capture/components/event-coordinate-selector/event-coordinate-selector.html
+++ b/src/pages/event-capture/components/event-coordinate-selector/event-coordinate-selector.html
@@ -1,3 +1,27 @@
+<!--
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
+-->
 <div *ngIf="!isLoading">
   <ion-row>
     <ion-col>
@@ -16,7 +40,7 @@
           <ion-icon name="trash" color="danger"></ion-icon>
         </button>
         <div class="item-card" color="font-color" ion-button clear text-justify (click)="openMap()">
-          <ion-icon name="locate" color="primary"></ion-icon>
+          <ion-icon name="locate" [color]="(colorSettings$ |async).colorAttributes.secondary"></ion-icon>
           <br>
         </div>
       </div>
