--- a/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
+++ b/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
@@ -1,55 +1,50 @@
+<!--
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
+-->
 <div class="custom-entry-form" id="_custom_entry_form_{{entryFormType}}">
   <div [innerHTML]="_htmlMarkup"></div>
 </div>
 <div>
   <ion-row>
     <ion-col col-6 col-sm-6>
-      <button
-        color="favorite"
-        round
-        ion-button
-        full
-        [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted"
-        (tap)="updateDataSetCompleteness()"
-      >
-        <span
-          *ngIf="!isDataSetCompletenessProcessRunning"
-          [translate]="'Complete'"
-        ></span>
-        <span
-          *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted"
-          [translate]="'Completing'"
-        ></span>
+      <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted"
+        (tap)="updateDataSetCompleteness()">
+        <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Complete'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted" [translate]="'Completing'"></span>
       </button>
     </ion-col>
     <ion-col col-6 col-sm-6>
-      <button
-        color="danger"
-        round
-        ion-button
-        full
-        [disabled]="isDataSetCompletenessProcessRunning || !isDataSetCompleted"
-        (tap)="updateDataSetCompleteness()"
-      >
-        <span
-          *ngIf="!isDataSetCompletenessProcessRunning"
-          [translate]="'Undo complete'"
-        ></span>
-        <span
-          *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted"
-          [translate]="'Undo completing'"
-        ></span>
+      <button color="danger" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || !isDataSetCompleted"
+        (tap)="updateDataSetCompleteness()">
+        <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Undo complete'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted" [translate]="'Undo completing'"></span>
       </button>
     </ion-col>
   </ion-row>
   <div *ngIf="!isDataSetCompletenessProcessRunning">
     <div *ngIf="dataSetsCompletenessInfo && dataSetsCompletenessInfo.complete">
-      <div
-        class="item-card animated fadeIn"
-        padding-bottom
-        padding-top
-        (click)="viewUserCompletenessInformation(dataSetsCompletenessInfo)"
-      >
+      <div class="item-card animated fadeIn" padding-bottom padding-top (click)="viewUserCompletenessInformation(dataSetsCompletenessInfo)">
         <span [translate]="'Completed by'"></span>
         <b>{{ dataSetsCompletenessInfo.storedBy }}</b> {{ 'on' | translate }}
         <b>{{ dataSetsCompletenessInfo.date }}</b>
