--- a/src/pages/tracker-capture/components/tracker-registration-form/tracker-registration-form.html
+++ b/src/pages/tracker-capture/components/tracker-registration-form/tracker-registration-form.html
@@ -1,15 +1,40 @@
+<!--
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
+-->
 <div *ngIf="formLayout === 'customLayout' && trackerRegistrationForm && trackerRegistrationForm !== '' ">
   <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="trackerRegistrationForm" [data]="dataObject"
-    [dataUpdateStatus]="dataUpdateStatus" [programTrackedEntityAttributes]="programTrackedEntityAttributes" (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
+    [dataUpdateStatus]="dataUpdateStatus" [programTrackedEntityAttributes]="programTrackedEntityAttributes"
+    (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
 </div>
 <div *ngIf="!(formLayout === 'customLayout' && trackerRegistrationForm && trackerRegistrationForm !== '' )">
   <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0">
     <form>
       <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes;trackBy: trackByFn">
         <div *ngIf="programTrackedEntityAttribute && programTrackedEntityAttribute.trackedEntityAttribute && programTrackedEntityAttribute.trackedEntityAttribute.id && !hiddenFields[programTrackedEntityAttribute.trackedEntityAttribute.id]">
-          <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
-            [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass" [mandatory]="programTrackedEntityAttribute.mandatory"
-            (onChange)="updateData($event)"></tracked-entity-inputs>
+          <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute"
+            [currentUser]="currentUser" [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+            [mandatory]="programTrackedEntityAttribute.mandatory" (onChange)="updateData($event)"></tracked-entity-inputs>
           <div *ngIf="errorOrWarningMessage[programTrackedEntityAttribute.trackedEntityAttribute.id]">
             <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[programTrackedEntityAttribute.trackedEntityAttribute.id]"
               [isEventCompleted]="isEventCompleted"></program-rule-action-message>
