feat(Input fields): Applying color theming based on user and system settings

--- a/src/components/unit-interval-input/unit-interval-input.html
+++ b/src/components/unit-interval-input/unit-interval-input.html
@@ -24,7 +24,8 @@
 -->
 <ion-row no-padding>
   <ion-col no-padding>
-    <ion-range [(ngModel)]="rangeValue" min="0" max="{{ maxCount }} " color="primary" (ionChange)="updateValue()"></ion-range>
+    <ion-range [(ngModel)]="rangeValue" min="0" max="{{ maxCount }} " [color]="(colorSettings$ |async).colorAttributes.secondary"
+      (ionChange)="updateValue()"></ion-range>
   </ion-col>
   <ion-col col-auto align-items-end>
     <div class="top-padding">
