--- a/src/components/coordinate-input/coordinate-input.html
+++ b/src/components/coordinate-input/coordinate-input.html
@@ -39,7 +39,7 @@
         <ion-icon padding name="trash" color="danger"></ion-icon>
       </button>
       <div class="item-card" color="font-color" ion-button clear text-justify (click)="openMap()">
-        <ion-icon name="locate" color="primary"></ion-icon>
+        <ion-icon name="locate" [color]="(colorSettings$ |async).colorAttributes.secondary"></ion-icon>
         <br>
       </div>
     </div>
