--- a/src/components/percentage-input/percentage-input.html
+++ b/src/components/percentage-input/percentage-input.html
@@ -24,7 +24,8 @@
 -->
 <ion-row no-padding>
   <ion-col no-padding>
-    <ion-range [(ngModel)]="rangeValue" color="primary" (ionChange)="updateValue()" pin="true"></ion-range>
+    <ion-range [(ngModel)]="rangeValue" [color]="(colorSettings$ |async).colorAttributes.secondary" (ionChange)="updateValue()"
+      pin="true"></ion-range>
   </ion-col>
   <ion-col col-auto>
     <div class="top-padding">
