--- a/src/components/true-only-input-field/true-only-input-field.html
+++ b/src/components/true-only-input-field/true-only-input-field.html
@@ -24,5 +24,5 @@
 -->
 <ion-item no-lines>
   <ion-label>Yes</ion-label>
-  <ion-checkbox [(ngModel)]="inputFieldValue" (ionChange)="updateValues()"></ion-checkbox>
+  <ion-checkbox [color]="(colorSettings$ |async).colorAttributes.secondary" [(ngModel)]="inputFieldValue" (ionChange)="updateValues()"></ion-checkbox>
 </ion-item>
