--- a/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
+++ b/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
@@ -25,7 +25,7 @@
 <div class="custom-entry-form" id="_custom_entry_form_{{entryFormType}}">
   <div [innerHTML]="_htmlMarkup"></div>
 </div>
-<div>
+<div *ngIf="entryFormType && entryFormType === 'aggregate'">
   <ion-row>
     <ion-col col-6 col-sm-6>
       <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted"
