fix: Fixing un reference value types on rendering forms

--- a/src/pages/event-capture/components/event-input-container/event-input-container.html
+++ b/src/pages/event-capture/components/event-input-container/event-input-container.html
@@ -99,7 +99,8 @@
 
     <div *ngIf="supportValueTypes.indexOf(dataElement.valueType) === -1">
       <div padding>
-        Currently '{{ dataElement.valueType.toLocaleLowerCase().replace('/_/g',' ')}}' as value type is not supported
+        Currently '{{ dataElement && dataElement.valueType? dataElement.valueType.toLocaleLowerCase().replace('/_/g','
+        ') : "Unknown"}}' as value type is not supported
       </div>
     </div>
   </div>
