feat: Adding selection of parameter for aggegate data downloader component

--- a/src/pages/sync/components/download-data/download-data.html
+++ b/src/pages/sync/components/download-data/download-data.html
@@ -38,7 +38,7 @@
 
 <div [ngSwitch]="donwnloadingTab">
   <div *ngSwitchCase="'aggregate'">
-    aggregate
+    <aggregate-data-downloader [colorSettings]="colorSettings"></aggregate-data-downloader>
   </div>
   <div *ngSwitchCase="'events'">
     events
