--- a/src/pages/sync/components/event-data-downloader/event-data-downloader.html
+++ b/src/pages/sync/components/event-data-downloader/event-data-downloader.html
@@ -25,8 +25,13 @@
 <div *ngIf="isMetadataLoaded">
   <program-parameter-selection (programParameterSelection)="onProgramParameterSelection($event)" [currentUser]="currentUser"
     [programIdsByUserRoles]="programIdsByUserRoles" [selectedDataDimension]="selectedDataDimension" [programType]="programType"></program-parameter-selection>
-  <button [color]="colorSettings.colorAttributes.secondary" [disabled]="!isFormReady" ion-button full text-capitalize
-    (tap)="downloadingEventData()">
+  <button [color]="colorSettings.colorAttributes.secondary" [disabled]="!isFormReady || showLoader" ion-button full
+    text-capitalize (tap)="downloadingEventData()">
     <span [translate]="'Download data'"></span>
   </button>
+  <div *ngIf="showLoader">
+    <div class="item-card">
+      <progress-bar [showLoader]="showLoader" [progressPercentage]="progressTrackerPacentage" [processMessage]="progressTrackerMessage"></progress-bar>
+    </div>
+  </div>
 </div>
